# gnome-shell-extension-hide-dash

./: README.md  meson.build
data/: metadata.json.in
hide-dash@xenatt.github.com/: extension.js  metadata.json
hide-dash@zacbarton.com/: metadata.json
src/: extension.js
